tests/baselines/reference/parserErrantSemicolonInClass1.errors.txt
parserErrantSemicolonInClass1.ts(15,16): error TS1049: A 'set' accessor must have exactly one parameter.


==== parserErrantSemicolonInClass1.ts (1 errors) ====
    class a {
        //constructor ();
        constructor (n: number);
        constructor (s: string);
        constructor (ns: any) {
    
        }
    
        public pgF() { };
    
        public pv;
        public get d() {
            return 30;
        }
        public set d() {
                   ~
!!! error TS1049: A 'set' accessor must have exactly one parameter.
        }
    
        public static get p2() {
            return { x: 30, y: 40 };
        }
    
        private static d2() {
        }
        private static get p3() {
            return "string";
        }
        private pv3;
    
        private foo(n: number): string;
        private foo(s: string): string;
        private foo(ns: any) {
            return ns.toString();
        }
    }
    